order lines added, address added, aligned logo, title and  fixed collapsed working !

--- a/app/assets/stylesheets/components/_card-order.scss
+++ b/app/assets/stylesheets/components/_card-order.scss
@@ -1,13 +1,54 @@
-.order-card-collapsed-dashboard {
+// TITLE -------------------------
+
+.orders-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $white;
+  position: sticky;
+  top: 0;
+  z-index: +2;
+  padding-bottom: 24px;
+  p {
+  margin-bottom: 0;
+  }
+  .add-order a {
+    display: flex;
+    padding-top: 5px;
+    p {
+      font-size: 11px;
+      font-weight: bold;
+      color: $grey_light;
+    }
+    & img {
+      margin-left: 4px;
+      height: 18px;
+      width: 18px;
+    }
+    &:hover {
+      text-decoration: none;
+    }
+  }
+}
+
+// CARDS --------------------------
+
+.order-card-dashboard-main {
   margin-bottom: 20px;
+}
+
+.order-card-collapsed-dashboard {
   background-color: $white_smoke;
   border: none;
   border-radius: 5px;
   .order-card-header {
-    padding: 18px 18px 0 18px;
+    padding: 13px 18px 0 18px;
   }
   .order-card-header-bottom-part {
-    padding: 18px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 13px 18px 13px 18px;
   }
   h1 {
     font-weight: 900;
@@ -27,7 +68,76 @@
   }
 }
 
-// LINE--------------------
+.order-lines-dashboard {
+  background-color: $white;
+  border-radius: 5px;
+  padding: 0 20px;
+  margin-bottom: 16px;
+  .order-line {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid $white_smoke;
+    padding-top: 16px;
+    padding-bottom: 14px;
+    p {
+      margin-bottom: 0;
+    }
+    .product-name {
+      font-size: 14px;
+      font-weight: bold;
+      color: $grey_dark;
+    }
+    .price {
+      .separation {
+        background-color: $grey_very_light;
+        height: 17px;
+        width: 1px;
+        margin: 0 16px;
+        position: absolute;
+        right: 70px;
+      }
+      .unit-price {
+        font-size: 10px;
+        color: $grey_light;
+        font-weight: bold;
+        position: absolute;
+        right: 100px;
+        line-height: 21px;
+      }
+      .total-price {
+        font-size: 14px;
+        color: $grey_medium;
+        font-weight: 900;
+      }
+    }
+  }
+}
+
+.order-address-dashboard {
+  background-color: $white;
+  border-radius: 5px;
+  padding: 20px;
+  p {
+    margin-bottom: 0;
+  }
+  .name {
+    font-size: 14px;
+    font-weight: bold;
+    color: $grey_medium;
+  }
+  .line-address {
+    height: 1px;
+    background-color: $white_smoke;
+    margin: 13px 0 13px 0;
+  }
+  .address {
+    font-size: 14px;
+    color: $grey_dark;
+    padding-bottom: 6px;
+  }
+}
+
+// LINE----------------------------------------
 
 .line-order-card {
   height: 1px;
@@ -36,19 +146,17 @@
 }
 
 
-// PICTOS ----------------
+// PICTOS -------------------------------------
 
 .order-card-picto {
-  // display: flex;
-  // flex-direction: row;
-  // align-items: center;
-  // justify-content: center;
+  display: flex;
+  align-items: center;
 }
 
 .order-card-picto img {
  width: 16px;
  height: 16px;
- margin: 8px auto 0 auto;
+ margin: 8px auto;
  display: block;
 }
 
@@ -64,6 +172,9 @@
 .waiting-action {
   background-color: $white_smoke;
   border: 4px solid $green_light;
+  & img {
+    margin: 4px auto;
+  }
 }
 
 .done-action {
@@ -73,6 +184,7 @@
   & img {
     width: 24px;
     height: 24px;
+    margin: 8px auto;
   }
 }
 
@@ -81,5 +193,5 @@
   width: 120px;
   background-color: $grey_light;
   position: absolute;
-  bottom: 37px;
+  top: 117px;
 }
